<resources>
    <string name="app_name">Mocinemas</string>
    <string name="something_went_wrong">Something went wrong, try again</string>
    <string name="rto">Request time out</string>
    <string name="no_internet">No internet detected</string>
    <string name="rating">Rating: </string>

    <string name="overview">Overview</string>
    <string name="playing_now">Playing Now</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="settings">Settings</string>
    <string name="poster">Poster</string>
    <string name="img_background">img_background</string>
    <string name="icon">Icon</string>

    <string name="duration">%1$s min</string>
    <string name="favorite_empty">No favorite movies yet</string>
    <string name="favorite">Favorite</string>
    <string name="please_wait">Please wait until load success</string>

    <string name="appwidget_text" translatable="false">Favorite Movies</string>
    <string name="empty_text" translatable="false">No data</string>
    <string name="image">iImage</string>
    <string name="reminder_mesage">Hey, you check me up!</string>
    <string name="released_now">Released now, check it!</string>
    <string name="notifikasi">Notification</string>
    <string name="notifikasi_text">On/off notification reminder</string>
    <string name="language">Language</string>
    <string name="language_text">Change language</string>
</resources>
